// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The \`Promotion\` component if \`backgroundImageUrl\` prop is passed should have the right structure 1`] = `
<Promotion
  backgroundImageUrl="testimage"
  discountAmount="100%"
  discountAmountParagraphText="Save up to"
  discountCodeParagraphText="Use the coupon code"
  discountHoverButtonText="Book Now with Discount"
  onClick={[Function]}
  placeholderBackgroundImage={null}
>
  <Segment
    basic={true}
    className="is-promotion"
    onClick={[Function]}
  >
    <div
      className="ui basic segment is-promotion"
      onClick={[Function]}
    >
      <Grid
        areColumnsCentered={false}
        className="first-grid"
        isStackable={true}
        stretched={true}
      >
        <Grid
          centered={false}
          className="first-grid"
          stackable={true}
          stretched={true}
        >
          <div
            className="ui stackable stretched grid first-grid"
          >
            <GridRow
              horizontalAlignContent="left"
              verticalAlign="middle"
            >
              <GridRow
                textAlign="left"
                verticalAlign="middle"
              >
                <div
                  className="left aligned middle aligned row"
                >
                  <GridColumn
                    className="content-section"
                    computer={9}
                    mobile={12}
                    tablet={9}
                    verticalAlignContent="top"
                    width={null}
                  >
                    <GridColumn
                      className="content-section"
                      computer={9}
                      mobile={12}
                      tablet={9}
                      verticalAlign="top"
                      width={null}
                    >
                      <div
                        className="top aligned nine wide computer twelve wide mobile nine wide tablet column content-section"
                      >
                        <withLazyLoad(ResponsiveImage)
                          imageUrl="testimage"
                          isLazyLoaded={false}
                          placeholderImageUrl={null}
                        >
                          <ResponsiveImage
                            alternativeText="Image Widget"
                            hasRoundedCorners={false}
                            imageHeight={null}
                            imageNotFoundLabelText="Image not found!"
                            imageTitle="Image Title"
                            imageUrl="testimage"
                            imageWidth={null}
                            isAvatar={false}
                            isCircular={false}
                            isFluid={false}
                            isLazyLoaded={false}
                            label={null}
                            placeholderImageUrl={null}
                            sizes={null}
                            srcSet={null}
                          >
                            <figure
                              className="responsive-image"
                            >
                              <Image
                                alt="Image Widget"
                                as="img"
                                avatar={false}
                                fluid={true}
                                onLoad={[Function]}
                                sizes={null}
                                src="testimage"
                                srcSet={null}
                                title="Image Title"
                                ui={true}
                              >
                                <img
                                  alt="Image Widget"
                                  className="ui fluid image"
                                  onLoad={[Function]}
                                  sizes={null}
                                  src="testimage"
                                  srcSet={null}
                                  title="Image Title"
                                />
                              </Image>
                            </figure>
                          </ResponsiveImage>
                        </withLazyLoad(ResponsiveImage)>
                        <Grid
                          areColumnsCentered={false}
                          isStackable={false}
                          padded={true}
                        >
                          <Grid
                            centered={false}
                            padded={true}
                            stackable={false}
                          >
                            <div
                              className="ui padded grid"
                            >
                              <Divider
                                className=""
                                hasLine={false}
                                size="huge"
                              >
                                <Divider
                                  className="is-size-huge"
                                  hidden={true}
                                  section={false}
                                >
                                  <div
                                    className="ui hidden divider is-size-huge"
                                  />
                                </Divider>
                              </Divider>
                              <ShowOn
                                computer={true}
                                mobile={false}
                                parent={[Function]}
                                parentProps={
                                  Object {
                                    "className": "book-now-button-container",
                                  }
                                }
                                tablet={true}
                                widescreen={true}
                              >
                                <GridRow
                                  className="book-now-button-container show-on-tablet show-on-computer show-on-widescreen"
                                  horizontalAlignContent="left"
                                >
                                  <GridRow
                                    className="book-now-button-container show-on-tablet show-on-computer show-on-widescreen"
                                    textAlign="left"
                                  >
                                    <div
                                      className="left aligned row book-now-button-container show-on-tablet show-on-computer show-on-widescreen"
                                    >
                                      <GridColumn
                                        textAlign="center"
                                        verticalAlignContent="top"
                                        width={12}
                                      >
                                        <GridColumn
                                          textAlign="center"
                                          verticalAlign="top"
                                          width={12}
                                        >
                                          <div
                                            className="center aligned top aligned twelve wide column"
                                          >
                                            <Button
                                              hasShadow={false}
                                              icon={null}
                                              isCompact={false}
                                              isDisabled={false}
                                              isFluid={false}
                                              isFormSubmit={false}
                                              isLoading={false}
                                              isPositionedRight={false}
                                              isRounded={true}
                                              isSecondary={false}
                                              onClick={[Function]}
                                              size={null}
                                            >
                                              <Button
                                                as="button"
                                                circular={true}
                                                className=""
                                                compact={false}
                                                disabled={false}
                                                floated="left"
                                                fluid={false}
                                                loading={false}
                                                onClick={[Function]}
                                                secondary={false}
                                                size={null}
                                                type="button"
                                              >
                                                <button
                                                  className="ui circular left floated button"
                                                  onClick={[Function]}
                                                  role="button"
                                                  type="button"
                                                >
                                                  Book Now with Discount
                                                </button>
                                              </Button>
                                            </Button>
                                          </div>
                                        </GridColumn>
                                      </GridColumn>
                                    </div>
                                  </GridRow>
                                </GridRow>
                              </ShowOn>
                            </div>
                          </Grid>
                        </Grid>
                      </div>
                    </GridColumn>
                  </GridColumn>
                  <GridColumn
                    className="discount-section"
                    computer={3}
                    mobile={12}
                    tablet={3}
                    textAlign="center"
                    verticalAlign="middle"
                    verticalAlignContent="top"
                    width={null}
                  >
                    <GridColumn
                      className="discount-section"
                      computer={3}
                      mobile={12}
                      tablet={3}
                      textAlign="center"
                      verticalAlign="top"
                      width={null}
                    >
                      <div
                        className="center aligned top aligned three wide computer twelve wide mobile three wide tablet column discount-section"
                      >
                        <Statistic
                          size="small"
                        >
                          <div
                            className="ui small statistic"
                          >
                            <StatisticLabel>
                              <div
                                className="label"
                              >
                                <Heading
                                  className={null}
                                  isColorInverted={false}
                                  size="small"
                                  textAlign={null}
                                >
                                  <Header
                                    as="h4"
                                    className={null}
                                    inverted={false}
                                    textAlign={null}
                                  >
                                    <h4
                                      className="ui header"
                                    >
                                      Save up to
                                    </h4>
                                  </Header>
                                </Heading>
                              </div>
                            </StatisticLabel>
                            <StatisticValue>
                              <div
                                className="value"
                              >
                                <Heading
                                  className={null}
                                  hasMargin={true}
                                  isColorInverted={false}
                                  size="large"
                                  textAlign={null}
                                >
                                  <Header
                                    as="h2"
                                    className=""
                                    inverted={false}
                                    textAlign={null}
                                  >
                                    <h2
                                      className="ui header"
                                    >
                                      100%
                                    </h2>
                                  </Header>
                                </Heading>
                              </div>
                            </StatisticValue>
                          </div>
                        </Statistic>
                      </div>
                    </GridColumn>
                  </GridColumn>
                </div>
              </GridRow>
            </GridRow>
          </div>
        </Grid>
      </Grid>
    </div>
  </Segment>
</Promotion>
`;

exports[`The \`Promotion\` component if \`discountCode\` prop is passed should have the right structure 1`] = `
<Promotion
  discountAmount="100%"
  discountAmountParagraphText="Save up to"
  discountCode="123"
  discountCodeParagraphText="Use the coupon code"
  discountHoverButtonText="Book Now with Discount"
  onClick={[Function]}
  placeholderBackgroundImage={null}
>
  <Segment
    basic={true}
    className="is-promotion"
    onClick={[Function]}
  >
    <div
      className="ui basic segment is-promotion"
      onClick={[Function]}
    >
      <Grid
        areColumnsCentered={false}
        className="first-grid"
        isStackable={true}
        stretched={true}
      >
        <Grid
          centered={false}
          className="first-grid"
          stackable={true}
          stretched={true}
        >
          <div
            className="ui stackable stretched grid first-grid"
          >
            <GridRow
              horizontalAlignContent="left"
              verticalAlign="middle"
            >
              <GridRow
                textAlign="left"
                verticalAlign="middle"
              >
                <div
                  className="left aligned middle aligned row"
                >
                  <GridColumn
                    className="content-section"
                    computer={9}
                    mobile={12}
                    tablet={9}
                    verticalAlignContent="top"
                    width={null}
                  >
                    <GridColumn
                      className="content-section"
                      computer={9}
                      mobile={12}
                      tablet={9}
                      verticalAlign="top"
                      width={null}
                    >
                      <div
                        className="top aligned nine wide computer twelve wide mobile nine wide tablet column content-section"
                      >
                        <Grid
                          areColumnsCentered={false}
                          isStackable={false}
                          padded={true}
                        >
                          <Grid
                            centered={false}
                            padded={true}
                            stackable={false}
                          >
                            <div
                              className="ui padded grid"
                            >
                              <Divider
                                className=""
                                hasLine={false}
                                size="huge"
                              >
                                <Divider
                                  className="is-size-huge"
                                  hidden={true}
                                  section={false}
                                >
                                  <div
                                    className="ui hidden divider is-size-huge"
                                  />
                                </Divider>
                              </Divider>
                              <ShowOn
                                computer={true}
                                mobile={false}
                                parent={[Function]}
                                parentProps={
                                  Object {
                                    "className": "book-now-button-container",
                                  }
                                }
                                tablet={true}
                                widescreen={true}
                              >
                                <GridRow
                                  className="book-now-button-container show-on-tablet show-on-computer show-on-widescreen"
                                  horizontalAlignContent="left"
                                >
                                  <GridRow
                                    className="book-now-button-container show-on-tablet show-on-computer show-on-widescreen"
                                    textAlign="left"
                                  >
                                    <div
                                      className="left aligned row book-now-button-container show-on-tablet show-on-computer show-on-widescreen"
                                    >
                                      <GridColumn
                                        textAlign="center"
                                        verticalAlignContent="top"
                                        width={12}
                                      >
                                        <GridColumn
                                          textAlign="center"
                                          verticalAlign="top"
                                          width={12}
                                        >
                                          <div
                                            className="center aligned top aligned twelve wide column"
                                          >
                                            <Button
                                              hasShadow={false}
                                              icon={null}
                                              isCompact={false}
                                              isDisabled={false}
                                              isFluid={false}
                                              isFormSubmit={false}
                                              isLoading={false}
                                              isPositionedRight={false}
                                              isRounded={true}
                                              isSecondary={false}
                                              onClick={[Function]}
                                              size={null}
                                            >
                                              <Button
                                                as="button"
                                                circular={true}
                                                className=""
                                                compact={false}
                                                disabled={false}
                                                floated="left"
                                                fluid={false}
                                                loading={false}
                                                onClick={[Function]}
                                                secondary={false}
                                                size={null}
                                                type="button"
                                              >
                                                <button
                                                  className="ui circular left floated button"
                                                  onClick={[Function]}
                                                  role="button"
                                                  type="button"
                                                >
                                                  Book Now with Discount
                                                </button>
                                              </Button>
                                            </Button>
                                          </div>
                                        </GridColumn>
                                      </GridColumn>
                                    </div>
                                  </GridRow>
                                </GridRow>
                              </ShowOn>
                              <ShowOn
                                computer={false}
                                mobile={true}
                                parent={[Function]}
                                parentProps={
                                  Object {
                                    "verticalAlign": "top",
                                  }
                                }
                                tablet={false}
                                widescreen={false}
                              >
                                <GridRow
                                  className="show-on-mobile"
                                  horizontalAlignContent="left"
                                  verticalAlign="top"
                                >
                                  <GridRow
                                    className="show-on-mobile"
                                    textAlign="left"
                                    verticalAlign="top"
                                  >
                                    <div
                                      className="left aligned top aligned row show-on-mobile"
                                    >
                                      <GridColumn
                                        floated="right"
                                        textAlign="center"
                                        verticalAlignContent="top"
                                        width={12}
                                      >
                                        <GridColumn
                                          floated="right"
                                          textAlign="center"
                                          verticalAlign="top"
                                          width={12}
                                        >
                                          <div
                                            className="center aligned right floated top aligned twelve wide column"
                                          >
                                            <div>
                                              <Paragraph
                                                size="tiny"
                                                weight={null}
                                              >
                                                <p
                                                  className="tiny"
                                                >
                                                  Use the coupon code
                                                </p>
                                              </Paragraph>
                                              <Button
                                                hasShadow={true}
                                                icon={null}
                                                isCompact={false}
                                                isDisabled={false}
                                                isFluid={false}
                                                isFormSubmit={false}
                                                isLoading={false}
                                                isPositionedRight={true}
                                                isRounded={false}
                                                isSecondary={false}
                                                onClick={[Function]}
                                                size={null}
                                              >
                                                <Button
                                                  as="button"
                                                  circular={false}
                                                  className="has-shadow"
                                                  compact={false}
                                                  disabled={false}
                                                  floated="right"
                                                  fluid={false}
                                                  loading={false}
                                                  onClick={[Function]}
                                                  secondary={false}
                                                  size={null}
                                                  type="button"
                                                >
                                                  <button
                                                    className="ui right floated button has-shadow"
                                                    onClick={[Function]}
                                                    role="button"
                                                    type="button"
                                                  >
                                                    123
                                                  </button>
                                                </Button>
                                              </Button>
                                            </div>
                                          </div>
                                        </GridColumn>
                                      </GridColumn>
                                    </div>
                                  </GridRow>
                                </GridRow>
                              </ShowOn>
                              <ShowOn
                                computer={true}
                                desktop={true}
                                mobile={false}
                                parent={[Function]}
                                parentProps={
                                  Object {
                                    "verticalAlign": "bottom",
                                  }
                                }
                                tablet={true}
                                widescreen={true}
                              >
                                <GridRow
                                  className="show-on-tablet show-on-computer show-on-widescreen"
                                  horizontalAlignContent="left"
                                  verticalAlign="bottom"
                                >
                                  <GridRow
                                    className="show-on-tablet show-on-computer show-on-widescreen"
                                    textAlign="left"
                                    verticalAlign="bottom"
                                  >
                                    <div
                                      className="left aligned bottom aligned row show-on-tablet show-on-computer show-on-widescreen"
                                    >
                                      <GridColumn
                                        floated="right"
                                        textAlign="right"
                                        verticalAlignContent="top"
                                        width={6}
                                      >
                                        <GridColumn
                                          floated="right"
                                          textAlign="right"
                                          verticalAlign="top"
                                          width={6}
                                        >
                                          <div
                                            className="right aligned right floated top aligned six wide column"
                                          >
                                            <div>
                                              <Paragraph
                                                size="tiny"
                                                weight={null}
                                              >
                                                <p
                                                  className="tiny"
                                                >
                                                  Use the coupon code
                                                </p>
                                              </Paragraph>
                                              <Button
                                                hasShadow={true}
                                                icon={null}
                                                isCompact={false}
                                                isDisabled={false}
                                                isFluid={false}
                                                isFormSubmit={false}
                                                isLoading={false}
                                                isPositionedRight={true}
                                                isRounded={false}
                                                isSecondary={false}
                                                onClick={[Function]}
                                                size={null}
                                              >
                                                <Button
                                                  as="button"
                                                  circular={false}
                                                  className="has-shadow"
                                                  compact={false}
                                                  disabled={false}
                                                  floated="right"
                                                  fluid={false}
                                                  loading={false}
                                                  onClick={[Function]}
                                                  secondary={false}
                                                  size={null}
                                                  type="button"
                                                >
                                                  <button
                                                    className="ui right floated button has-shadow"
                                                    onClick={[Function]}
                                                    role="button"
                                                    type="button"
                                                  >
                                                    123
                                                  </button>
                                                </Button>
                                              </Button>
                                            </div>
                                          </div>
                                        </GridColumn>
                                      </GridColumn>
                                    </div>
                                  </GridRow>
                                </GridRow>
                              </ShowOn>
                            </div>
                          </Grid>
                        </Grid>
                      </div>
                    </GridColumn>
                  </GridColumn>
                  <GridColumn
                    className="discount-section"
                    computer={3}
                    mobile={12}
                    tablet={3}
                    textAlign="center"
                    verticalAlign="middle"
                    verticalAlignContent="top"
                    width={null}
                  >
                    <GridColumn
                      className="discount-section"
                      computer={3}
                      mobile={12}
                      tablet={3}
                      textAlign="center"
                      verticalAlign="top"
                      width={null}
                    >
                      <div
                        className="center aligned top aligned three wide computer twelve wide mobile three wide tablet column discount-section"
                      >
                        <Statistic
                          size="small"
                        >
                          <div
                            className="ui small statistic"
                          >
                            <StatisticLabel>
                              <div
                                className="label"
                              >
                                <Heading
                                  className={null}
                                  isColorInverted={false}
                                  size="small"
                                  textAlign={null}
                                >
                                  <Header
                                    as="h4"
                                    className={null}
                                    inverted={false}
                                    textAlign={null}
                                  >
                                    <h4
                                      className="ui header"
                                    >
                                      Save up to
                                    </h4>
                                  </Header>
                                </Heading>
                              </div>
                            </StatisticLabel>
                            <StatisticValue>
                              <div
                                className="value"
                              >
                                <Heading
                                  className={null}
                                  hasMargin={true}
                                  isColorInverted={false}
                                  size="large"
                                  textAlign={null}
                                >
                                  <Header
                                    as="h2"
                                    className=""
                                    inverted={false}
                                    textAlign={null}
                                  >
                                    <h2
                                      className="ui header"
                                    >
                                      100%
                                    </h2>
                                  </Header>
                                </Heading>
                              </div>
                            </StatisticValue>
                          </div>
                        </Statistic>
                      </div>
                    </GridColumn>
                  </GridColumn>
                </div>
              </GridRow>
            </GridRow>
          </div>
        </Grid>
      </Grid>
    </div>
  </Segment>
</Promotion>
`;

exports[`The \`Promotion\` component if \`headingText\` prop is passed should have the right structure 1`] = `
<Promotion
  discountAmount="100%"
  discountAmountParagraphText="Save up to"
  discountCodeParagraphText="Use the coupon code"
  discountHoverButtonText="Book Now with Discount"
  headingText="Hello World!"
  onClick={[Function]}
  placeholderBackgroundImage={null}
>
  <Segment
    basic={true}
    className="is-promotion"
    onClick={[Function]}
  >
    <div
      className="ui basic segment is-promotion"
      onClick={[Function]}
    >
      <Grid
        areColumnsCentered={false}
        className="first-grid"
        isStackable={true}
        stretched={true}
      >
        <Grid
          centered={false}
          className="first-grid"
          stackable={true}
          stretched={true}
        >
          <div
            className="ui stackable stretched grid first-grid"
          >
            <GridRow
              horizontalAlignContent="left"
              verticalAlign="middle"
            >
              <GridRow
                textAlign="left"
                verticalAlign="middle"
              >
                <div
                  className="left aligned middle aligned row"
                >
                  <GridColumn
                    className="content-section"
                    computer={9}
                    mobile={12}
                    tablet={9}
                    verticalAlignContent="top"
                    width={null}
                  >
                    <GridColumn
                      className="content-section"
                      computer={9}
                      mobile={12}
                      tablet={9}
                      verticalAlign="top"
                      width={null}
                    >
                      <div
                        className="top aligned nine wide computer twelve wide mobile nine wide tablet column content-section"
                      >
                        <Grid
                          areColumnsCentered={false}
                          isStackable={false}
                          padded={true}
                        >
                          <Grid
                            centered={false}
                            padded={true}
                            stackable={false}
                          >
                            <div
                              className="ui padded grid"
                            >
                              <GridRow
                                horizontalAlignContent="left"
                                verticalAlign="top"
                              >
                                <GridRow
                                  textAlign="left"
                                  verticalAlign="top"
                                >
                                  <div
                                    className="left aligned top aligned row"
                                  >
                                    <ShowOn
                                      computer={true}
                                      mobile={false}
                                      parent={[Function]}
                                      parentProps={
                                        Object {
                                          "textAlign": "left",
                                          "width": 12,
                                        }
                                      }
                                      tablet={true}
                                      widescreen={true}
                                    >
                                      <GridColumn
                                        className="show-on-tablet show-on-computer show-on-widescreen"
                                        textAlign="left"
                                        verticalAlignContent="top"
                                        width={12}
                                      >
                                        <GridColumn
                                          className="show-on-tablet show-on-computer show-on-widescreen"
                                          textAlign="left"
                                          verticalAlign="top"
                                          width={12}
                                        >
                                          <div
                                            className="left aligned top aligned twelve wide column show-on-tablet show-on-computer show-on-widescreen"
                                          >
                                            <Heading
                                              className={null}
                                              hasMargin={true}
                                              isColorInverted={false}
                                              size="medium"
                                              textAlign={null}
                                            >
                                              <Header
                                                as="h3"
                                                className=""
                                                inverted={false}
                                                textAlign={null}
                                              >
                                                <h3
                                                  className="ui header"
                                                >
                                                  Hello World!
                                                </h3>
                                              </Header>
                                            </Heading>
                                          </div>
                                        </GridColumn>
                                      </GridColumn>
                                    </ShowOn>
                                    <ShowOn
                                      computer={false}
                                      mobile={true}
                                      parent={[Function]}
                                      parentProps={
                                        Object {
                                          "textAlign": "center",
                                          "width": 12,
                                        }
                                      }
                                      tablet={false}
                                      widescreen={false}
                                    >
                                      <GridColumn
                                        className="show-on-mobile"
                                        textAlign="center"
                                        verticalAlignContent="top"
                                        width={12}
                                      >
                                        <GridColumn
                                          className="show-on-mobile"
                                          textAlign="center"
                                          verticalAlign="top"
                                          width={12}
                                        >
                                          <div
                                            className="center aligned top aligned twelve wide column show-on-mobile"
                                          >
                                            <Heading
                                              className={null}
                                              hasMargin={true}
                                              isColorInverted={false}
                                              size="medium"
                                              textAlign={null}
                                            >
                                              <Header
                                                as="h3"
                                                className=""
                                                inverted={false}
                                                textAlign={null}
                                              >
                                                <h3
                                                  className="ui header"
                                                >
                                                  Hello World!
                                                </h3>
                                              </Header>
                                            </Heading>
                                          </div>
                                        </GridColumn>
                                      </GridColumn>
                                    </ShowOn>
                                  </div>
                                </GridRow>
                              </GridRow>
                              <ShowOn
                                computer={true}
                                mobile={false}
                                parent={[Function]}
                                parentProps={
                                  Object {
                                    "className": "book-now-button-container",
                                  }
                                }
                                tablet={true}
                                widescreen={true}
                              >
                                <GridRow
                                  className="book-now-button-container show-on-tablet show-on-computer show-on-widescreen"
                                  horizontalAlignContent="left"
                                >
                                  <GridRow
                                    className="book-now-button-container show-on-tablet show-on-computer show-on-widescreen"
                                    textAlign="left"
                                  >
                                    <div
                                      className="left aligned row book-now-button-container show-on-tablet show-on-computer show-on-widescreen"
                                    >
                                      <GridColumn
                                        textAlign="center"
                                        verticalAlignContent="top"
                                        width={12}
                                      >
                                        <GridColumn
                                          textAlign="center"
                                          verticalAlign="top"
                                          width={12}
                                        >
                                          <div
                                            className="center aligned top aligned twelve wide column"
                                          >
                                            <Button
                                              hasShadow={false}
                                              icon={null}
                                              isCompact={false}
                                              isDisabled={false}
                                              isFluid={false}
                                              isFormSubmit={false}
                                              isLoading={false}
                                              isPositionedRight={false}
                                              isRounded={true}
                                              isSecondary={false}
                                              onClick={[Function]}
                                              size={null}
                                            >
                                              <Button
                                                as="button"
                                                circular={true}
                                                className=""
                                                compact={false}
                                                disabled={false}
                                                floated="left"
                                                fluid={false}
                                                loading={false}
                                                onClick={[Function]}
                                                secondary={false}
                                                size={null}
                                                type="button"
                                              >
                                                <button
                                                  className="ui circular left floated button"
                                                  onClick={[Function]}
                                                  role="button"
                                                  type="button"
                                                >
                                                  Book Now with Discount
                                                </button>
                                              </Button>
                                            </Button>
                                          </div>
                                        </GridColumn>
                                      </GridColumn>
                                    </div>
                                  </GridRow>
                                </GridRow>
                              </ShowOn>
                            </div>
                          </Grid>
                        </Grid>
                      </div>
                    </GridColumn>
                  </GridColumn>
                  <GridColumn
                    className="discount-section"
                    computer={3}
                    mobile={12}
                    tablet={3}
                    textAlign="center"
                    verticalAlign="middle"
                    verticalAlignContent="top"
                    width={null}
                  >
                    <GridColumn
                      className="discount-section"
                      computer={3}
                      mobile={12}
                      tablet={3}
                      textAlign="center"
                      verticalAlign="top"
                      width={null}
                    >
                      <div
                        className="center aligned top aligned three wide computer twelve wide mobile three wide tablet column discount-section"
                      >
                        <Statistic
                          size="small"
                        >
                          <div
                            className="ui small statistic"
                          >
                            <StatisticLabel>
                              <div
                                className="label"
                              >
                                <Heading
                                  className={null}
                                  isColorInverted={false}
                                  size="small"
                                  textAlign={null}
                                >
                                  <Header
                                    as="h4"
                                    className={null}
                                    inverted={false}
                                    textAlign={null}
                                  >
                                    <h4
                                      className="ui header"
                                    >
                                      Save up to
                                    </h4>
                                  </Header>
                                </Heading>
                              </div>
                            </StatisticLabel>
                            <StatisticValue>
                              <div
                                className="value"
                              >
                                <Heading
                                  className={null}
                                  hasMargin={true}
                                  isColorInverted={false}
                                  size="large"
                                  textAlign={null}
                                >
                                  <Header
                                    as="h2"
                                    className=""
                                    inverted={false}
                                    textAlign={null}
                                  >
                                    <h2
                                      className="ui header"
                                    >
                                      100%
                                    </h2>
                                  </Header>
                                </Heading>
                              </div>
                            </StatisticValue>
                          </div>
                        </Statistic>
                      </div>
                    </GridColumn>
                  </GridColumn>
                </div>
              </GridRow>
            </GridRow>
          </div>
        </Grid>
      </Grid>
    </div>
  </Segment>
</Promotion>
`;

exports[`The \`Promotion\` component should have the right structure 1`] = `
<Promotion
  discountAmount="100%"
  discountAmountParagraphText="Save up to"
  discountCodeParagraphText="Use the coupon code"
  discountHoverButtonText="Book Now with Discount"
  onClick={[Function]}
  placeholderBackgroundImage={null}
>
  <Segment
    basic={true}
    className="is-promotion"
    onClick={[Function]}
  >
    <div
      className="ui basic segment is-promotion"
      onClick={[Function]}
    >
      <Grid
        areColumnsCentered={false}
        className="first-grid"
        isStackable={true}
        stretched={true}
      >
        <Grid
          centered={false}
          className="first-grid"
          stackable={true}
          stretched={true}
        >
          <div
            className="ui stackable stretched grid first-grid"
          >
            <GridRow
              horizontalAlignContent="left"
              verticalAlign="middle"
            >
              <GridRow
                textAlign="left"
                verticalAlign="middle"
              >
                <div
                  className="left aligned middle aligned row"
                >
                  <GridColumn
                    className="content-section"
                    computer={9}
                    mobile={12}
                    tablet={9}
                    verticalAlignContent="top"
                    width={null}
                  >
                    <GridColumn
                      className="content-section"
                      computer={9}
                      mobile={12}
                      tablet={9}
                      verticalAlign="top"
                      width={null}
                    >
                      <div
                        className="top aligned nine wide computer twelve wide mobile nine wide tablet column content-section"
                      >
                        <Grid
                          areColumnsCentered={false}
                          isStackable={false}
                          padded={true}
                        >
                          <Grid
                            centered={false}
                            padded={true}
                            stackable={false}
                          >
                            <div
                              className="ui padded grid"
                            >
                              <Divider
                                className=""
                                hasLine={false}
                                size="huge"
                              >
                                <Divider
                                  className="is-size-huge"
                                  hidden={true}
                                  section={false}
                                >
                                  <div
                                    className="ui hidden divider is-size-huge"
                                  />
                                </Divider>
                              </Divider>
                              <ShowOn
                                computer={true}
                                mobile={false}
                                parent={[Function]}
                                parentProps={
                                  Object {
                                    "className": "book-now-button-container",
                                  }
                                }
                                tablet={true}
                                widescreen={true}
                              >
                                <GridRow
                                  className="book-now-button-container show-on-tablet show-on-computer show-on-widescreen"
                                  horizontalAlignContent="left"
                                >
                                  <GridRow
                                    className="book-now-button-container show-on-tablet show-on-computer show-on-widescreen"
                                    textAlign="left"
                                  >
                                    <div
                                      className="left aligned row book-now-button-container show-on-tablet show-on-computer show-on-widescreen"
                                    >
                                      <GridColumn
                                        textAlign="center"
                                        verticalAlignContent="top"
                                        width={12}
                                      >
                                        <GridColumn
                                          textAlign="center"
                                          verticalAlign="top"
                                          width={12}
                                        >
                                          <div
                                            className="center aligned top aligned twelve wide column"
                                          >
                                            <Button
                                              hasShadow={false}
                                              icon={null}
                                              isCompact={false}
                                              isDisabled={false}
                                              isFluid={false}
                                              isFormSubmit={false}
                                              isLoading={false}
                                              isPositionedRight={false}
                                              isRounded={true}
                                              isSecondary={false}
                                              onClick={[Function]}
                                              size={null}
                                            >
                                              <Button
                                                as="button"
                                                circular={true}
                                                className=""
                                                compact={false}
                                                disabled={false}
                                                floated="left"
                                                fluid={false}
                                                loading={false}
                                                onClick={[Function]}
                                                secondary={false}
                                                size={null}
                                                type="button"
                                              >
                                                <button
                                                  className="ui circular left floated button"
                                                  onClick={[Function]}
                                                  role="button"
                                                  type="button"
                                                >
                                                  Book Now with Discount
                                                </button>
                                              </Button>
                                            </Button>
                                          </div>
                                        </GridColumn>
                                      </GridColumn>
                                    </div>
                                  </GridRow>
                                </GridRow>
                              </ShowOn>
                            </div>
                          </Grid>
                        </Grid>
                      </div>
                    </GridColumn>
                  </GridColumn>
                  <GridColumn
                    className="discount-section"
                    computer={3}
                    mobile={12}
                    tablet={3}
                    textAlign="center"
                    verticalAlign="middle"
                    verticalAlignContent="top"
                    width={null}
                  >
                    <GridColumn
                      className="discount-section"
                      computer={3}
                      mobile={12}
                      tablet={3}
                      textAlign="center"
                      verticalAlign="top"
                      width={null}
                    >
                      <div
                        className="center aligned top aligned three wide computer twelve wide mobile three wide tablet column discount-section"
                      >
                        <Statistic
                          size="small"
                        >
                          <div
                            className="ui small statistic"
                          >
                            <StatisticLabel>
                              <div
                                className="label"
                              >
                                <Heading
                                  className={null}
                                  isColorInverted={false}
                                  size="small"
                                  textAlign={null}
                                >
                                  <Header
                                    as="h4"
                                    className={null}
                                    inverted={false}
                                    textAlign={null}
                                  >
                                    <h4
                                      className="ui header"
                                    >
                                      Save up to
                                    </h4>
                                  </Header>
                                </Heading>
                              </div>
                            </StatisticLabel>
                            <StatisticValue>
                              <div
                                className="value"
                              >
                                <Heading
                                  className={null}
                                  hasMargin={true}
                                  isColorInverted={false}
                                  size="large"
                                  textAlign={null}
                                >
                                  <Header
                                    as="h2"
                                    className=""
                                    inverted={false}
                                    textAlign={null}
                                  >
                                    <h2
                                      className="ui header"
                                    >
                                      100%
                                    </h2>
                                  </Header>
                                </Heading>
                              </div>
                            </StatisticValue>
                          </div>
                        </Statistic>
                      </div>
                    </GridColumn>
                  </GridColumn>
                </div>
              </GridRow>
            </GridRow>
          </div>
        </Grid>
      </Grid>
    </div>
  </Segment>
</Promotion>
`;
